--- a/login.html
+++ b/login.html
@@ -4,11 +4,11 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <title>Login</title>
 
     <!-- Bootstrap -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="assets/css/bootstrap.min.css" rel="stylesheet">
     <style type="text/css">
       .
     </style>
@@ -19,7 +19,7 @@
         <section>
           <div class="row brand">
             <div class="col-xs-12 col-md-12">
-              <img src="assets/logo.png">
+              <img src="assets/img/logo.png">
             </div>
           </div>
         </section>
@@ -71,7 +71,7 @@
       
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="js/jquery.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+    <script src="assets/js/jquery.js"></script>
+    <script src="assets/js/bootstrap.min.js"></script>
   </body>
 </html>
