--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 						<i class="fa fa-search" id="search"></i>
 					</div>
 					<div class="username">
-						<span>Oladele Samson <span class="company">ok</span></span>
+						<span>Jude Ejike <span class="company">ok</span></span>
 						<span class="caret"></span>
 					</div>
 					<div>
@@ -112,7 +112,7 @@
 						<div class="nav-content">
 							<div class="contents">
 								<div class="text-center">
-									<h1>Woo-hoo!<br>Let’s get started, oladele.</h1>
+									<h1>Woo-hoo!<br>Let’s get started, Jude.</h1>
 									<p>Kin is a simple tool to help you manage ok’s workplace. It’s easy to set up and use. Here’s a few steps to get you started.</p>
 									<ul class="list-inline">
 										<li class="active"><i class="fa fa-star"></i> Getting Started</li>
