--- a/login.html
+++ b/login.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="shortcut icon" href="assets/img/favicon.ico">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <title>Login</title>
 
@@ -19,7 +20,7 @@
         <section>
           <div class="row brand">
             <div class="col-xs-12 col-md-12">
-              <img src="assets/img/logo.png">
+              <a href="login.html"><img src="assets/img/logo.png"></a>
             </div>
           </div>
         </section>
@@ -35,7 +36,7 @@
                   <input type="password" name="password" placeholder="password" class="form-control">
                 </div> 
                 <div class="row">
-                  <div class="col-xs-6 col-md-6"> <button class="btn btn-primary btn-lg"> SIGN IN</button></div>
+                  <div class="col-xs-6 col-md-6"> <button class="btn btn-primary btn-lg"><a class="white" href="index.html"> SIGN IN</a></button></div>
                   <div class="col-xs-6 col-md-6"><p class="cant_sign_in">cant sign in ?</p></div>
                 </div> 
                 <div class="or-separator">or</div> 
